# rust-ms-sql-demo

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
mssql/: mastlog.ldf  msdblog.ldf
script/: check_col_key.sql
src/: database.rs  main.rs
src/lib/: database.rs  lib.rs
src/models/: colums.rs  mod.rs
src/utils/: db.rs  mod.rs  ms_sql_tb.rs  sql.rs
tests/: conn.rs
