[package]
name = "rust-ms-sql-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = "0.10.0"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["compat"] }  
anyhow = "1.0"

# futures-preview = { version = "0.3.0-alpha.14", features = ["io-compat"] }