[package]
name = "rust_ms_sql_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures="0.3.21"
futures-state-stream="0.2.0"
tiberius = { version = "0.10.0", default-features=false, features=["chrono"] }
once_cell = "1.3"
# asynchronous-codec = "0.5"
# async-trait = "0.1"
tokio-core = "0.1"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["compat"] }  
anyhow = "1.0"
indicatif = "0.17.0"
# async_std = { version = "1", features = ["attributes"] }

[[test]]
path = "tests/conn.rs"
name = "conn"
# required-features = ["sql-browser-tokio"]

# [dependencies.async-net]
# version = "1.4.1"
# optional = true

# [dependencies.async-std]
# version = "1"
# optional = true
# features = ["attributes"]

# [dependencies.async-native-tls]
# version = "0.4"
# features = ["runtime-async-std"]
# optional = true

# [dev-dependencies]
# futures-preview = { version = "0.3.0-alpha.14", features = ["io-compat"] }

# [features]
# all = ["sql-browser-async-std"]
# sql-browser-async-std = ["async-std"]